Fixed dragged card flickering on dragstart

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 
 .container {
     display: flex;
+    justify-content: center;
     margin: 0;
     width: 100vw;
     height: calc(100vh - 85px);
@@ -32,10 +33,10 @@ body {
     border-radius: 2em;
     display: flex;
     background-color: lightgray;
-    margin: 15px auto;
+    margin: 20px 10px;
     box-sizing: border-box;
     border: 2px solid black;
-    width: 30%;
+    width: 315px;
     flex-direction: column;
     overflow-y: hidden;
 }
@@ -240,8 +241,8 @@ body {
 #opaque {
     position: absolute;
     rotate: 2deg;
-    /* top: -500px;
-    left: -500px; */
+    top: -500px;
+    left: -500px;
     opacity: 100%;
     scale: 90%;
     pointer-events: none;
